src/styles/renderer.scss
.ob-form__auto-save-icon {
  position: fixed;
  bottom: 1px;
  left: 1px;
  font-size: $size-5;
  animation: spin 1.5s linear infinite;
  z-index: 100;
}

.ob-form-container {
  .ob-form {
    padding-bottom: 4rem;
  }

  .steps-header {
    display: none;
  }

  .steps {
    &.is-small {
      font-size: $size-6;
    }

    .step-item {
      font-size: $size-7;
      cursor: pointer;

      &:focus {
        outline: none;
      }

      &.is-disabled {
        .step-marker {
          opacity: 0.2;
        }
      }

      &.is-error {
        .step-marker {
          background-color: transparent;
          border-color: transparent;

          .material-icons {
            background-color: $white;
          }
        }
      }
    }

    .steps-content {
      width: 100%;

      .step-content {
        width: 100%;

        &.is-invisible {
          position: absolute;
          top: 0;
          bottom: 0;
          overflow: hidden;
        }
      }

      &.is-single-step {
        margin-top: 0;
        margin-bottom: 0;
      }
    }

    .step-progress-mobile {
      display: none;
    }
  }

  .label {
    font-size: 1.1rem;

    &.is-required::after {
      content: '*';
      display: inline;
    }
  }

  .ob-element:not(:last-child) {
    margin-bottom: $size-2;
  }

  .field {
    width: 100%;

    &:not(:last-child) {
      margin-bottom: 0;
    }
  }

  .ob-heading__text {
    margin-top: 80px;
  }

  .ob-element:nth-of-type(1) {
    .ob-heading__text {
      margin-top: 0;
    }
  }

  .ob-camera,
  .ob-location,
  .ob-barcode-scanner {
    figure {
      background-color: $white-ter;
      text-align: center;
      margin-bottom: 5px;
      border-radius: $radius;
      line-height: 1;
      padding: 10px;

      img {
        display: inline-block;
        margin: 0;
        max-height: 300px;
      }

      video {
        max-height: 300px;
      }

      .figure-content {
        height: 300px;
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        margin: auto;

        .ob-location__latitude,
        .ob-location__longitude {
          margin-bottom: $size-6;

          & + p {
            margin-bottom: $size-6;
          }
        }
      }
    }
  }

  .ob-buttons-submit {
    margin-top: $size-1;
  }

  .ob-buttons-submit__spacer {
    flex: 1;
  }

  @media only screen and (max-width: $tablet) {
    .steps-header {
      z-index: 33;
      position: fixed;
      top: 0;
      right: 0;
      left: 0;
      display: flex;
      align-items: center;
      background-color: $white-ter;
      box-shadow: $elevation-2;
      -webkit-transition: box-shadow 0.2s ease;
      -moz-transition: box-shadow 0.2s ease;
      -o-transition: box-shadow 0.2s ease;
      transition: box-shadow 0.2s ease;

      // Accommodate iOS status bar
      box-sizing: content-box;
      padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
      padding-top: env(safe-area-inset-top); /* iOS 11.2 */

      &:focus {
        outline: none;
      }

      &.is-active {
        box-shadow: none;

        & > .dropdown.icon {
          transform: rotate(180deg);
        }
      }

      .steps-header-active-page {
        flex: 1;
        min-width: 0;
        display: flex;
        justify-content: center;
        align-items: center;

        .icon {
          margin-right: $size-8;
        }
      }

      .steps-header-active-page-label {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      .icon {
        padding: $size-7;
        line-height: 1;
        -webkit-transition: transform 0.2s linear;
        -moz-transition: transform 0.2s linear;
        -o-transition: transform 0.2s linear;
        transition: transform 0.2s linear;
      }
    }

    #steps-navigation {
      z-index: 32;
      position: fixed;
      top: $size-1;
      right: 0;
      left: 0;
      background-color: $white;
      box-shadow: none;
      max-height: 0;
      overflow-y: auto;
      -webkit-transition: box-shadow 0.2s ease, max-height 0.2s ease;
      -moz-transition: box-shadow 0.2s ease, max-height 0.2s ease;
      -o-transition: box-shadow 0.2s ease, max-height 0.2s ease;
      transition: box-shadow 0.2s ease, max-height 0.2s ease;

      // Accommodate iOS status bar
      margin-top: constant(safe-area-inset-top); /* iOS 11.0 */
      margin-top: env(safe-area-inset-top); /* iOS 11.2 */

      &.is-active {
        box-shadow: $elevation-3;
        max-height: 40%;

        + .steps-navigation-background {
          background-color: $black;
          opacity: 0.2;
          z-index: 31;
          position: fixed;
          top: 0;
          bottom: 0;
          right: 0;
          left: 0;
        }
      }

      .steps {
        padding: $size-4;
      }
    }

    .steps {
      .steps-content {
        margin-top: 0;
      }

      .steps-actions {
        z-index: 30;
        position: fixed;
        bottom: 0;
        right: 0;
        left: 0;
        display: flex;
        display: -webkit-box;
        justify-content: space-between;
        -webkit-box-pack: justify;
        align-items: center;
        background: $white-ter;
        box-shadow: $elevation-2;

        // Accommodate iOS virtual home button
        box-sizing: content-box;
        padding-bottom: constant(safe-area-inset-bottom); /* iOS 11.0 */
        padding-bottom: env(safe-area-inset-bottom); /* iOS 11.2 */

        .steps-action {
          flex-grow: 0;
          flex-basis: unset;
          margin: 0;

          button {
            border-radius: 0;
            height: $size-2;
            padding-left: $size-5;
            padding-right: $size-5;
          }
        }

        .step-progress-mobile {
          display: flex;
          justify-content: center;
          align-items: center;
          flex-grow: 1;

          .step-progress-mobile-dot {
            width: 10px;
            height: 10px;
            background: $grey-lighter;
            border-radius: 50%;
            margin-right: 5px;

            &:last-child {
              margin-right: 0;
            }

            &.is-active {
              background: $grey;
            }
          }
        }
      }
    }
  }

  @media only screen and (max-width: $mobile) {
    .ob-buttons-submit {
      .ob-button {
        flex: unset;
        min-width: unset;
      }
    }

    .ob-button {
      flex: 1;

      &:nth-child(even) {
        margin-right: 0;
      }
    }

    .modal-card-foot {
      .ob-button {
        min-width: unset;
      }
    }
  }
}

.steps-header-active-page-icon {
  color: $primary;
  border: 0.2em solid $primary;
  border-radius: 50%;
  min-height: $size-4;
  min-width: $size-4;
  font-size: $size-7;
  margin-right: $size-8;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

